@@ -1,3 +1,9 @@
+2012-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/binarystring.hxx, include/pqxx/notify-listen.hxx,
+ test/test004.cxx, test/test023.cxx, test/test078.cxx, test/test079.cxx,
+ test/test087.cxx:
+ - Deprecate notify_listener.
+ - Deprecate binarystring (connection-unaware) escaping functions.
 2011-12-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/tuple.hxx:
  - Forward-declare pqxx::range_error.
